Edited readme, added comments

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "displayName": "Daichi Comfort",
-  "name": "homebridge-daichi-comfort-conditioner",
+  "name": "@alexeimotkoff/homebridge-daichi-comfort-conditioner",
   "version": "1.0.0",
   "description": "Plugin for integrating devices (air conditioners only) from the application 'Daichi Comfort'",
   "license": "Apache-2.0",
